# arbit

./: .gitignore  AGENTS.md  Cargo.toml  readme.md
.github/workflows/: ci.yml  nightly-heavy.yml
crates/arbit-backend/: Cargo.toml
crates/arbit-backend/src/: lib.rs
crates/arbit-cli/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/arbit-cli/src/: errors.rs  lib.rs  main.rs
crates/arbit-cli/src/imu/: mod.rs  parser.rs
crates/arbit-cli/src/output/: analysis.rs  json.rs  mod.rs
crates/arbit-cli/src/providers/: mod.rs  video.rs
crates/arbit-cli/src/types/: config.rs  imu_sample.rs  mod.rs  session_data.rs  video_frame.rs
crates/arbit-cli/src/video/: decoder.rs  mod.rs
crates/arbit-core/: Cargo.toml  README.md
crates/arbit-core/src/: lib.rs
crates/arbit-core/src/adapters/: mod.rs
crates/arbit-core/src/contracts/: mod.rs
crates/arbit-core/src/db/: kf_index.rs  mod.rs
crates/arbit-core/src/img/: coords.rs  image_utils.rs  mod.rs  pyramid.rs
crates/arbit-core/src/imu/: bias.rs  gravity.rs  mod.rs  motion_detector.rs  preintegration.rs  scale.rs  sync.rs
crates/arbit-core/src/init/: mod.rs  two_view.rs
crates/arbit-core/src/logs/: mod.rs
crates/arbit-core/src/map/: descriptor.rs  mod.rs
crates/arbit-core/src/math/: mod.rs  projection.rs  se3.rs  so3.rs  utils.rs
crates/arbit-core/src/relocalize/: mod.rs  pnp.rs
crates/arbit-core/src/time/: mod.rs
crates/arbit-core/src/track/: feat_descriptor.rs  feat_matcher.rs  health.rs  lk.rs  mod.rs  seed.rs
crates/arbit-core/src/track/feat_descriptor/: orb.rs
crates/arbit-core/src/track/seed/: fast_seed.rs  shi_tom_seed.rs  utils.rs
crates/arbit-core/src/vo/: mod.rs
crates/arbit-engine/: Cargo.toml
crates/arbit-engine/src/: cli.rs  lib.rs  tmp.md  track_manager.rs
crates/arbit-engine/src/bench/: mod.rs
crates/arbit-engine/src/debug_server/: mod.rs  router.rs
crates/arbit-engine/src/types/: mod.rs  snapshot.rs
crates/arbit-engine/tests/: perf_gates.rs
crates/arbit-eval/: Cargo.toml  README.md
crates/arbit-eval/src/: lib.rs
crates/arbit-eval/tests/: replay_eval.rs
crates/arbit-ffi/: Cargo.toml  README.md  cbindgen.toml
crates/arbit-ffi/include/: .gitignore
crates/arbit-ffi/scripts/: generate-header.sh
crates/arbit-ffi/src/: lib.rs
crates/arbit-frontend/: Cargo.toml
crates/arbit-frontend/src/: lib.rs
crates/arbit-native/: Cargo.toml
crates/arbit-native/src/: lib.rs
crates/arbit-providers/: Cargo.toml
crates/arbit-providers/src/: ios_camera.rs  lib.rs
crates/arbit-py/: README.md  hatch_build.py  pyproject.toml
crates/arbit-py/arbit/: __init__.py  engine.py  types.py
crates/arbit-py/scripts/: build-native.sh
crates/arbit-swift/: Cargo.toml  README.md  cbindgen.toml
crates/arbit-swift/scripts/: build-xcframework.sh
crates/arbit-swift/src/: lib.rs
crates/arbit-swift/swift-package/: .gitignore  Package.swift
crates/arbit-swift/swift-package/Sources/Arbit/: Arbit.swift  ArbitV2.swift
crates/arbit-swift/swift-package/Sources/arbit-swift-lib/: arbit_swift_lib.swift
examples/arbit-arkit-example/: README.md
examples/arbit-arkit-example/arbit-arkit-example/: AppDelegate.swift  AxesSceneView.swift  CameraPreviewView.swift  CapturePipeline.swift  ContentView.swift  DeviceOrientationProvider.swift
examples/arbit-arkit-example/arbit-arkit-example.xcodeproj/: project.pbxproj
examples/arbit-arkit-example/arbit-arkit-example.xcodeproj/project.xcworkspace/xcuserdata/xavierroma.xcuserdatad/: UserInterfaceState.xcuserstate
examples/arbit-arkit-example/arbit-arkit-example.xcodeproj/xcuserdata/xavierroma.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples/arbit-arkit-example/arbit-arkit-example.xcodeproj/xcuserdata/xavierroma.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/arbit-py/: eth3_utils.py  flow_visualizations.py  frame_sources.py  opencvv.ipynb  pipeline.py  process_video.py  process_video_simple.py  pyproject.toml  rerun_visualizer.py  video_utils.py  visualizer.py
examples/arbit-py/slam/: __init__.py  camera_matrix.py  keyframe.py  map.py  map_point.py
examples/arbit-swift-lib/: Package.swift
examples/arbit-swift-lib/ArbitFFI.xcframework/: Info.plist
examples/arbit-swift-lib/ArbitFFI.xcframework/ios-arm64/Headers/: arbit_swift.h
examples/arbit-swift-lib/Sources/arbit-swift-lib/: arbit_swift_lib.swift
examples/arbit-swift-lib/include/: arbit_swift.h  module.modulemap
scripts/: check-ffi-symbol-parity.sh  run-perf-gates.sh  run-replay-eval.sh
