[package]
name = "arbit-cli"
version = "0.1.0"
edition = "2024"
[dependencies]
arbit-providers = { path = '../arbit-providers' }
arbit-core = { path = '../arbit-core' }
arbit-engine = { path = '../arbit-engine' }
chrono = "0.4.42"
csv = "1.3.1"
nalgebra = "0.34.1"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
log = "0.4"
ffmpeg-next = "8.0.0"

[dev-dependencies]
tempfile = "3"