[package]
name = "arbit-core"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.1"
nalgebra-glm = "0.20.0"
rand = { version = "0.8", features = ["small_rng"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1.41"
imageproc = "0.25.0"
image = "0.25.8"

[dev-dependencies]
approx = "0.5"
