[package]
name = "arbit-engine"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug-server = [
    "dep:axum",
    "dep:tokio",
    "dep:serde_json",
    "dep:tower-http",
]
debug-server-lan = ["debug-server"]

[dependencies]
arbit-core = { path = "../arbit-core" }
arbit-frontend = { path = "../arbit-frontend" }
arbit-backend = { path = "../arbit-backend" }
arbit-providers = { path = "../arbit-providers" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
axum = { version = "0.8.6", optional = true }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "sync", "net"], optional = true }
serde_json = { version = "1.0.145", optional = true }
thiserror = "2.0.17"
tower-http = { version = "0.6.6", features = ["cors", "trace"], optional = true }
crossbeam = "0.8.4"
arc-swap = "1.7.1"
