[package]
name = "arbit-eval"
version = "0.1.0"
edition = "2024"

[dependencies]
arbit-engine = { path = "../arbit-engine" }
arbit-providers = { path = "../arbit-providers" }
arbit-core = { path = "../arbit-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"

[dev-dependencies]
approx = "0.5"
