[package]
name = "arbit-ffi"
version = "0.1.0"
edition = "2024"

[dependencies]
arbit-core = { path = "../arbit-core" }
arbit-engine = { path = "../arbit-engine" }
arbit-providers = { path = "../arbit-providers" }
nalgebra = "0.34.1"
log = "0.4"
env_logger = "0.11"

[lib]
name = "arbit_ffi"
crate-type = ["rlib", "staticlib"]
