[package]
name = "arbit-ffi"
version = "0.1.0"
edition = "2024"

[dependencies]
arbit-core = { path = "../arbit-core" }
arbit-engine = { path = "../arbit-engine" }
arbit-providers = { path = "../arbit-providers" }
log = "0.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[lib]
name = "arbit_ffi"
crate-type = ["rlib", "staticlib", "cdylib"]
