[package]
name = "arbit-native"
version = "0.1.0"
edition = "2024"

[features]
default = []
native-opencv = ["dep:image", "dep:imageproc"]
native-gtsam = ["dep:tiny-solver"]
native-bow = ["dep:sprs"]

[dependencies]
thiserror = "2.0.17"
image = { version = "0.25.8", optional = true }
imageproc = { version = "0.25.0", optional = true }
tiny-solver = { version = "0.18.0", optional = true }
sprs = { version = "0.11.3", optional = true }
