[project]
name = "arbit-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arbit",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "opencv-python>=4.10.0",
]

[tool.uv.sources]
arbit = { path = "../../crates/arbit-py" }
